less/stb-sprites.less
/* ... */
.stb-color-sprite-small {
  background: url("../images/stb-sprites/color-sprites.png") no-repeat;  
  width: 16px;
  height: 16px;
	
  &.ok {
    background-position: 0px 0px;
  }
  
  &.ok-circle {
    background-position: 0px -100px;
  }
  
  &.warning {
    background-position: 0px -200px;
  }

  &.info {
    background-position: 0px -300px;
  }  

  &.pdf {
    background-position: 0px -400px;
  }  

  &.word {
    background-position: 0px -500px;
  }

  &.excel {
    background-position: 0px -600px;
  }  

  &.powerpoint {
    background-position: 0px -700px;
  }  
  
}

.stb-color-sprite-medium {
  background: url("../images/stb-sprites/color-sprites.png") no-repeat;  
  width: 24px;
  height: 24px;
	
  &.ok {
    background-position: -100px 0px;

  }
  
  &.ok-circle {
    background-position: -100px -100px;
  }
  
  &.warning {
    background-position: -100px -200px;
  }

  &.info {
    background-position: -100px -300px;
  }  

  &.pdf {
    background-position: -100px -400px;
  }  

  &.word {
    background-position: -100px -500px;
  }

  &.excel {
    background-position: -100px -600px;
  }  

  &.powerpoint {
    background-position: -100px -700px;
  }  
  
}

// Circling of progress bar counters in forms
div.circle-12,
span.circle-12 {
  height: 24px;
  width: 24px;
  -webkit-border-radius: 24px;
  -moz-border-radius: 24px;
  border-radius: 24px;
}
// End of circling of progress bar counters in forms

// Circling of icons
div.circle-16,
span.circle-16 {
  height: 36px;
  width: 36px;
  padding: 10px 10px;
  margin-right: 6px;
  -webkit-border-radius: 36px;
  -moz-border-radius: 36px;
  border-radius: 36px;
}

div.circle-24,
span.circle-24 {
  height: 48px;
  width: 48px;
  padding: 12px;
  -webkit-border-radius: 48px;
  -moz-border-radius: 48px;
  border-radius: 48px;
}
// End of circling of icons

// Removing "underline" border of links inside circled icons
div.circle-16 a,
div.circle-24 a,
span.circle-16 a,
span.circle-24 a {
  border-bottom: none;
}
// End of removing "underline" border of links inside circled icons

// Adjustments for displays with enhanced pixel density
@media
  (min--moz-device-pixel-ratio: 2),
  (-o-min-device-pixel-ratio: 2/1),
  (-webkit-min-device-pixel-ratio: 2),
  (min-device-pixel-ratio: 2) {
  
  .stb-sprite-small {
    background: url("../images/stb-sprites/general-sprites-2x.png") no-repeat;
    // reduce to 1x size
    background-size: 600px;
  }
  
  .stb-sprite-medium {
    background: url("../images/stb-sprites/general-sprites-2x.png") no-repeat;
    // reduce to 1x size
    background-size: 600px;
  }
  
  .stb-color-sprite-small {
    background: url("../images/stb-sprites/color-sprites-2x.png") no-repeat;
    // reduce to 1x size
    background-size: 200px;
  }

  .stb-color-sprite-medium {
    background: url("../images/stb-sprites/color-sprites-2x.png") no-repeat;
    // reduce to 1x size
    background-size: 200px;  
  }
}

a {
  > span.stb-sprite-medium, > span.stb-color-sprite-small, >span.stb-color-sprite-medium, >span.stb-color-sprite-small{
    margin-right: 6px;
  }
}

